# worker/swagger/worker.json
@@ -5,7 +5,7 @@
     "description": "worker api",
     "version": ""
   },
-  "host": "127.0.0.1:8888",
+  "host": "127.0.0.1:8080",
   "schemes": [
     "http",
     "https"
@@ -24,9 +24,7 @@
         "responses": {
           "200": {
             "description": "A successful response.",
-            "schema": {
-              "$ref": "#/definitions/AttachResponse"
-            }
+            "schema": {}
           }
         },
         "parameters": [
@@ -52,9 +50,7 @@
         "responses": {
           "200": {
             "description": "A successful response.",
-            "schema": {
-              "$ref": "#/definitions/ExecResponse"
-            }
+            "schema": {}
           }
         },
         "parameters": [
@@ -140,9 +136,7 @@
         "responses": {
           "200": {
             "description": "A successful response.",
-            "schema": {
-              "$ref": "#/definitions/RemoveContainerResponse"
-            }
+            "schema": {}
           }
         },
         "parameters": [
@@ -168,9 +162,7 @@
         "responses": {
           "200": {
             "description": "A successful response.",
-            "schema": {
-              "$ref": "#/definitions/RunContainerResponse"
-            }
+            "schema": {}
           }
         },
         "parameters": [
@@ -196,9 +188,7 @@
         "responses": {
           "200": {
             "description": "A successful response.",
-            "schema": {
-              "$ref": "#/definitions/StartContainerResponse"
-            }
+            "schema": {}
           }
         },
         "parameters": [
@@ -231,11 +221,10 @@
         },
         "parameters": [
           {
-            "name": "selector",
+            "name": "id",
             "in": "query",
             "required": true,
-            "type": "invalid",
-            "format": "UNKNOWN"
+            "type": "string"
           }
         ],
         "requestBody": {},
@@ -251,9 +240,7 @@
         "responses": {
           "200": {
             "description": "A successful response.",
-            "schema": {
-              "$ref": "#/definitions/StopContainerResponse"
-            }
+            "schema": {}
           }
         },
         "parameters": [
@@ -292,28 +279,56 @@
     }
   },
   "definitions": {
+    "AttachConfig": {
+      "type": "object",
+      "properties": {
+        "stream": {
+          "type": "boolean",
+          "format": "boolean"
+        },
+        "stdin": {
+          "type": "boolean",
+          "format": "boolean"
+        },
+        "stdout": {
+          "type": "boolean",
+          "format": "boolean"
+        },
+        "stderr": {
+          "type": "boolean",
+          "format": "boolean"
+        },
+        "detach_keys": {
+          "type": "string"
+        },
+        "logs": {
+          "type": "boolean",
+          "format": "boolean"
+        }
+      },
+      "title": "AttachConfig",
+      "required": [
+        "stream",
+        "stdin",
+        "stdout",
+        "stderr",
+        "detach_keys",
+        "logs"
+      ]
+    },
     "AttachRequest": {
       "type": "object",
       "properties": {
-        "selector": {
-          "$ref": "#/definitions/Metadata"
+        "container": {
+          "type": "string"
+        },
+        "config": {
+          "$ref": "#/definitions/AttachConfig"
         }
       },
       "title": "AttachRequest",
       "required": [
-        "selector"
-      ]
-    },
-    "AttachResponse": {
-      "type": "object",
-      "properties": {
-        "error": {
-          "$ref": "#/definitions/Error"
-        }
-      },
-      "title": "AttachResponse",
-      "required": [
-        "error"
+        "container"
       ]
     },
     "Command": {
@@ -351,13 +366,140 @@
     "ContainerConfig": {
       "type": "object",
       "properties": {
-        "todo": {
-          "type": "string"
+        "hostname": {
+          "type": "string",
+          "description": " Hostname"
+        },
+        "domainname": {
+          "type": "string",
+          "description": " Domainname"
+        },
+        "user": {
+          "type": "string",
+          "description": " User that will run the command(s) inside the container, also support user:group"
+        },
+        "attach_stdin": {
+          "type": "boolean",
+          "format": "boolean",
+          "description": " Attach the standard input, makes possible user interaction"
+        },
+        "attach_stdout": {
+          "type": "boolean",
+          "format": "boolean",
+          "description": " Attach the standard output"
+        },
+        "attach_stderr": {
+          "type": "boolean",
+          "format": "boolean",
+          "description": " Attach the standard error"
+        },
+        "exposed_ports": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          },
+          "description": " List of exposed ports"
+        },
+        "tty": {
+          "type": "boolean",
+          "format": "boolean",
+          "description": " Attach standard streams to a tty, including stdin if it is not closed."
+        },
+        "open_stdin": {
+          "type": "boolean",
+          "format": "boolean",
+          "description": " Open stdin"
+        },
+        "stdin_once": {
+          "type": "boolean",
+          "format": "boolean",
+          "description": " If true, close stdin after the 1 attached client disconnects."
+        },
+        "env": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          },
+          "description": " List of environment variable to set in the container"
+        },
+        "cmd": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          },
+          "description": " Command to run when starting the container"
+        },
+        "healthcheck": {
+          "$ref": "#/definitions/HealthConfig",
+          "description": " Healthcheck describes how to check the container is healthy"
+        },
+        "args_escaped": {
+          "type": "boolean",
+          "format": "boolean",
+          "description": " True if command is already escaped (meaning treat as a command line) (Windows specific)."
+        },
+        "image": {
+          "type": "string",
+          "description": " Name of the image as it was passed by the operator (e.g. could be symbolic)"
+        },
+        "volumes": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          },
+          "description": " List of volumes (mounts) used for the container"
+        },
+        "working_dir": {
+          "type": "string",
+          "description": " Current directory (PWD) in the command will be launched"
+        },
+        "entrypoint": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          },
+          "description": " Entrypoint to run when starting the container"
+        },
+        "network_disabled": {
+          "type": "boolean",
+          "format": "boolean",
+          "description": " Is network disabled"
+        },
+        "mac_address": {
+          "type": "string",
+          "description": " Mac Address of the container"
+        },
+        "on_build": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          },
+          "description": " ONBUILD metadata that were defined on the image Dockerfile"
+        },
+        "labels": {
+          "type": "object",
+          "description": " List of labels set to this container"
+        },
+        "stop_signal": {
+          "type": "string",
+          "description": " Signal to stop a container"
+        },
+        "stop_timeout": {
+          "type": "integer",
+          "format": "int32",
+          "description": " Timeout (in seconds) to stop a container"
+        },
+        "shell": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          },
+          "description": " Shell for shell-form of RUN, CMD, ENTRYPOINT"
         }
       },
       "title": "ContainerConfig",
       "required": [
-        "todo"
+        "image"
       ]
     },
     "ContainerStatus": {
@@ -375,25 +517,25 @@
     "ContainerStatusRequest": {
       "type": "object",
       "properties": {
-        "selector": {
-          "$ref": "#/definitions/Metadata"
+        "id": {
+          "type": "string"
         }
       },
       "title": "ContainerStatusRequest",
       "required": [
-        "selector"
+        "id"
       ]
     },
     "ContainerStatusResponse": {
       "type": "object",
       "properties": {
-        "container": {
-          "$ref": "#/definitions/Container"
+        "status": {
+          "type": "string"
         }
       },
       "title": "ContainerStatusResponse",
       "required": [
-        "container"
+        "status"
       ]
     },
     "CronJob": {
@@ -496,32 +638,130 @@
         "todo"
       ]
     },
+    "ExecConfig": {
+      "type": "object",
+      "properties": {
+        "user": {
+          "type": "string",
+          "description": " User that will run the command"
+        },
+        "privileged": {
+          "type": "boolean",
+          "format": "boolean",
+          "description": " Is the container in privileged mode"
+        },
+        "tty": {
+          "type": "boolean",
+          "format": "boolean",
+          "description": " Attach standard streams to a tty."
+        },
+        "attach_stdin": {
+          "type": "boolean",
+          "format": "boolean",
+          "description": " Attach the standard input, makes possible user interaction"
+        },
+        "attach_stderr": {
+          "type": "boolean",
+          "format": "boolean",
+          "description": " Attach the standard error"
+        },
+        "attach_stdout": {
+          "type": "boolean",
+          "format": "boolean",
+          "description": " Attach the standard output"
+        },
+        "detach": {
+          "type": "boolean",
+          "format": "boolean",
+          "description": " Execute in detach mode"
+        },
+        "detach_keys": {
+          "type": "string",
+          "description": " Escape keys for detach"
+        },
+        "env": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          },
+          "description": " Environment variables"
+        },
+        "working_dir": {
+          "type": "string",
+          "description": " Working directory"
+        },
+        "cmd": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          },
+          "description": " Execution commands and args"
+        }
+      },
+      "title": "ExecConfig",
+      "required": [
+        "user",
+        "privileged",
+        "tty",
+        "attach_stdin",
+        "attach_stderr",
+        "attach_stdout",
+        "detach",
+        "detach_keys",
+        "env",
+        "working_dir",
+        "cmd"
+      ]
+    },
     "ExecRequest": {
       "type": "object",
       "properties": {
-        "selector": {
-          "$ref": "#/definitions/Metadata"
+        "container": {
+          "type": "string"
         },
-        "command": {
-          "$ref": "#/definitions/Command"
+        "config": {
+          "$ref": "#/definitions/ExecConfig"
         }
       },
       "title": "ExecRequest",
       "required": [
-        "selector",
-        "command"
+        "container"
       ]
     },
-    "ExecResponse": {
+    "HealthConfig": {
       "type": "object",
       "properties": {
-        "error": {
-          "$ref": "#/definitions/Error"
+        "test": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          }
+        },
+        "interval": {
+          "type": "integer",
+          "format": "int64",
+          "description": " Interval is the time to wait between checks."
+        },
+        "timeout": {
+          "type": "integer",
+          "format": "int64",
+          "description": " Timeout is the time to wait before considering the check to have hung."
+        },
+        "start_period": {
+          "type": "integer",
+          "format": "int64",
+          "description": " The start period for the container to initialize before the retries starts to count down."
+        },
+        "retries": {
+          "type": "integer",
+          "format": "int32"
         }
       },
-      "title": "ExecResponse",
+      "title": "HealthConfig",
       "required": [
-        "error"
+        "test",
+        "interval",
+        "timeout"
       ]
     },
     "Job": {
@@ -643,97 +883,76 @@
     "RemoveContainerRequest": {
       "type": "object",
       "properties": {
-        "selector": {
-          "$ref": "#/definitions/Metadata"
+        "id": {
+          "type": "string"
+        },
+        "remove_volumnes": {
+          "type": "boolean",
+          "format": "boolean"
+        },
+        "remove_links": {
+          "type": "boolean",
+          "format": "boolean"
+        },
+        "force": {
+          "type": "boolean",
+          "format": "boolean"
         }
       },
       "title": "RemoveContainerRequest",
       "required": [
-        "selector"
-      ]
-    },
-    "RemoveContainerResponse": {
-      "type": "object",
-      "properties": {
-        "error": {
-          "$ref": "#/definitions/Error"
-        }
-      },
-      "title": "RemoveContainerResponse",
-      "required": [
-        "error"
+        "id",
+        "force"
       ]
     },
     "RunContainerRequest": {
       "type": "object",
       "properties": {
+        "container_name": {
+          "type": "string"
+        },
         "config": {
           "$ref": "#/definitions/ContainerConfig"
         }
       },
       "title": "RunContainerRequest",
       "required": [
+        "container_name",
         "config"
-      ]
-    },
-    "RunContainerResponse": {
-      "type": "object",
-      "properties": {
-        "error": {
-          "$ref": "#/definitions/Error"
-        }
-      },
-      "title": "RunContainerResponse",
-      "required": [
-        "error"
       ]
     },
     "StartContainerRequest": {
       "type": "object",
       "properties": {
-        "selector": {
-          "$ref": "#/definitions/Metadata"
+        "id": {
+          "type": "string"
+        },
+        "checkpoint_id": {
+          "type": "string"
+        },
+        "checkpoint_dir": {
+          "type": "string"
         }
       },
       "title": "StartContainerRequest",
       "required": [
-        "selector"
-      ]
-    },
-    "StartContainerResponse": {
-      "type": "object",
-      "properties": {
-        "error": {
-          "$ref": "#/definitions/Error"
-        }
-      },
-      "title": "StartContainerResponse",
-      "required": [
-        "error"
+        "id"
       ]
     },
     "StopContainerRequest": {
       "type": "object",
       "properties": {
-        "selector": {
-          "$ref": "#/definitions/Metadata"
+        "id": {
+          "type": "string"
+        },
+        "timeout": {
+          "type": "integer",
+          "format": "int64"
         }
       },
       "title": "StopContainerRequest",
       "required": [
-        "selector"
-      ]
-    },
-    "StopContainerResponse": {
-      "type": "object",
-      "properties": {
-        "error": {
-          "$ref": "#/definitions/Error"
-        }
-      },
-      "title": "StopContainerResponse",
-      "required": [
-        "error"
+        "id"
       ]
     },
     "Token": {
